html/sites/all/themes/custom/ocha-basic/assets/sass/components/_calendar-actions.scss
.block-views {
	display: block;
	margin: $base-unit 0;

	label {
		font-family: $heading-font;
		margin-bottom: $base-unit/2;
	}
}

.block-views.processed {
	.content .item-list {
		display: none;
	}
}

.calendar-sidebar-btn {
	position: absolute;
	right: 0;
	top: $base-unit*4.25;
	height: $base-unit*4;
}

.sidebar-underlay {
	position: fixed;
  background: rgba(255,255,255,0.5);
  top: 0;
  width: 100%;
  bottom: 0;
  z-index: 99;
  transition: opacity 0.3s ease, visibility 0.3s ease;

  &.hidden {
  	opacity: 0;
  	visibility: hidden;
  	z-index: -1;
  	display: block;
  }
}

.calendar-actions {
	width: 90%;
	max-width: $mobile-sidebar-width;
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	background: white;
	z-index: 100;
	overflow: scroll;
	padding: $base-unit*4 $base-unit*2.5 $base-unit*2 $base-unit*2.5;
	transition: transform 0.3s ease, visibility 0.3s ease;
	transform: translateX(-$mobile-sidebar-width - 10);
	box-shadow: 4px 0 3px -3px rgba(0,0,0,0.2);
	visibility: hidden;

	&.active {
		transform: translateX(0);
		visibility: visible;
	}


	@include clearfix;
	font-family: $heading-font;

	.open {
		.dropdown-menu {
			overflow: visible;
			border-bottom: 1px solid $light-border-color;
		}
	}

	.dropdown-menu {
		border-radius: 0;
		border: none;
		box-shadow: none;
		position: static;
		overflow: hidden;
		margin: 0;
		list-style: none;
		background: white;
		z-index: 99;

		li {
			margin: $base-unit 0;
			border: none;

			button {
				text-align: left;
			}
		}

		.fc-button {
			text-align: left;
			text-transform: uppercase;

			&.fc-state-active {
				color: $heading-text-color;

				&:hover, &:focus {
					color: $light-text-color;
				}
			}
		}

		label {
			line-height: 1.3;
			margin: $base-unit 0;
		}

		.chosen-container {
			margin-bottom: $base-unit;
		}

		a {
			&:hover, &:focus {
				background: none;
				color: $body-text-color;
			}
		}

	}

}

.calendar-actions__close {
	position: absolute;
	right: $base-unit*2;
	top: $base-unit;

	i {
		font-weight: bold;
	}
}

.calendar-actions__toggle {
	width: 100%;
	text-align: left;
	padding: $base-unit*1.5 $base-unit*3 $base-unit*1.5 0;
	border-bottom: 1px solid $light-border-color;
	position: relative;
	color: $heading-text-color;
	@include font-size($medium-font-size);
	font-family: $heading-font;
	@extend .icon-arrow-down;
	background: transparent;
	transition: all 0.3s ease;
	cursor: pointer;

	&:before {
		font-family: 'unocha-icons';
		font-weight: normal;
		position: absolute;
		right: $base-unit/2;
		top: $base-unit*2;
		height: $base-unit*2;
		line-height: $base-unit*2;
	}

	&:hover, &:focus, .open & {
		color: $link-text-color;
		background: lighten($light-bg-color, 4%);
		border-color: $highlight-border-color;
		padding-left: $base-unit/2;
		outline: none;
	}

	&[aria-expanded="true"] {
		&:before {
			transform: rotate(180deg);
		}
	}

	span {
		text-transform: capitalize;
	}
}

.calendar-filters__current {
	padding: $base-unit 0;
	border-bottom: 1px solid $light-border-color;
	font-style: italic;

	strong {
		font-style: normal;
	}
}

@include media-query(md) {

	.block-views {
		width: 25%;
		float: left;
		padding-right: $base-unit;

		&:nth-child(4n) {
			padding: 0;
		}
	}

	.calendar-actions {
		position: relative;
		max-width: none;
		width: 100%;
		top: auto;
		bottom: auto;
		left: auto;
		transform: none;
		box-shadow: none;
		padding: 0;
		overflow: visible;
		border-bottom: 2px solid $light-border-color;
		visibility: visible;

		display: flex;
		justify-content: space-between;

		.dropdown-menu {
			z-index: 110;
			margin-top: 2px;
		}


		.flexbox & {
			&:after {
				content: none;
			}
		}

		.no-flexbox & {
			display: block;
		}
	}

	.calendar-actions--filtered {
		margin-bottom: $base-unit*6;

		.calendar-view-selector {
	 		bottom: -93px;
		}
	}

	.calendar-actions__close, .calendar-sidebar-btn, .sidebar-underlay {
		display: none;
	}

	.calendar-actions__toggle {
		border-bottom: 2px solid transparent;
		margin-bottom: -2px;
		padding: $base-unit $base-unit*3 $base-unit $base-unit/2;
		z-index: 100;

		&:before {
			top: 13px;
			right: $base-unit/2;
		}

	}

	.calendar-export {
		width: $base-unit*10;
		float: right;
		margin: 0;

		.dropdown-menu {
			min-width: 0;

			li {
				margin: 0;
				border-bottom: 1px solid $light-border-color;
			}

			button {
				padding: $base-unit*1.5 $base-unit;
			}
		}
	}

	.calendar-settings {
		width: auto;
		max-width: 460px;
		float: left;
		margin-right: $base-unit*2;

		.calendar-actions__toggle {
			height: $base-unit*5;
	    overflow: hidden;
	    line-height: 1.5;
	    white-space: nowrap;
	    text-overflow: ellipsis;
		}

		.dropdown-menu {
			padding: 0 $base-unit;

			label {
				margin-top: $base-unit*1.5;
			}
		}

		.chosen-container {
			max-width: 100%;
			margin-bottom: $base-unit*1.5;
		}

		.chosen-container.chosen-with-drop .chosen-drop {
			position: relative;
		}
	}

	.calendar-settings, .calendar-export {
		position: relative;

		.dropdown-menu {
			position: absolute;
			box-shadow: 0 1px 2px 0 rgba(0,0,0,0.25);
		}

		&.open {
			.calendar-actions__toggle {
				border-color: $highlight-border-color;
			}

			.dropdown-menu {
				position: absolute;
				width: 100%;
				border: none;
			}
		}
	}

	.calendar-view-selector {
    position: absolute;
    right: 0;
    bottom: -69px;

    &.open {
    	position: absolute;
    }

    .calendar-actions__toggle {
    	font-weight: normal;
    	padding-top: $base-unit*1.5;
    	padding-bottom: $base-unit*1.5;
    	line-height: 1.2;
    }

		.dropdown-menu {
			position: absolute;
			box-shadow: 0 1px 2px 0 rgba(0,0,0,0.25);

			button {
				padding: $base-unit*1.5 $base-unit;
				border-bottom: 1px solid $light-border-color;

				&:last-of-type {
					border-bottom: none;
				}
			}
		}
	}

	.calendar-filters {
		width: 120px;

		.no-flexbox & {
			float: left;
		}

		.dropdown-menu {
			width: 736px;
			margin-top: 0;
		}

		&.open {
			position: static;

			&:before {
				content: "";
				display: block;
				position: absolute;
				width: 100%;
				height: 0px;
				border-bottom: 2px solid $light-border-color;
				top: ($base-unit*5) - 2;
			}

			.dropdown-menu {
				border-bottom: none;
			}

		}
	}

	.calendar-filters__current {
		border-bottom: none;
		width: 736px;
		position: absolute;
		padding: $base-unit*1.5 0;

		p {
	    height: $base-unit*3;
	    overflow: hidden;
	    text-overflow: ellipsis;
	    white-space: nowrap;
			margin: 0;
		}
	}

	.calendar-filters__clear {
		position: absolute;
		right: 0;
		top: $base-unit*1.5;
	}

	.calendar-actions--filtered {
		.open {
			.calendar-filters__clear {
				display: flex;
			}
		}
	}

	.calendar-filters + div {
		.no-flexbox & {
			float: right;
		}
	}
}

@include media-query(lg) {

	.block-views {
		margin: $base-unit/2 0 $base-unit 0;
	}

	.calendar-settings {
		max-width: 600px;
	}

	.calendar-filters {
		.dropdown-menu {
			width: 993px;
		}
	}

	.calendar-filters__current {
		width: 993px;
	}

}

@include media-query(xl) {

	.calendar-filters {
			.dropdown-menu {
				width: 1120px;
			}
	}

	.calendar-filters__current {
		width: 1120px;
	}

}

@media print {

	.calendar-export, .calendar-filters {
		display: none!important;
	}

	.calendar-settings {
		h2, label, .chosen-container, select {
			display: none!important;
		}
	}

}

